--- a/package.json
+++ b/package.json
@@ -11,18 +11,14 @@
   ],
   "author": "shane13hsi",
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.19.0",
-    "eslint": "^1.6.0",
-    "eslint-config-airbnb": "^0.1.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
-    "ip": "^1.0.1",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
-    "lodash": "^3.10.1",
     "node-sass": "^3.3.3",
     "nyan-progress-webpack-plugin": "^1.1.3",
     "react-hot-loader": "^1.3.0",
@@ -31,5 +27,13 @@
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
+  },
+  "devDependencies": {
+    "eslint": "^1.6.0",
+    "eslint-config-airbnb": "^0.1.0"
+  },
+  "dependencies": {
+    "ip": "^1.0.1",
+    "lodash": "^3.10.1"
   }
 }
